// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile 2 onCreateRunningOrder 1`] = `
[
  [
    {
      "EditorialDuration": {
        "_mosDuration": 3505,
      },
      "EditorialStart": {
        "_mosTime": 1239987720000,
        "_timezone": "Z",
        "_timezoneOffset": 0,
      },
      "ID": {
        "_mosString128": "96857485",
      },
      "Slug": {
        "_mosString128": "5PM RUNDOWN",
      },
      "Stories": [
        {
          "ID": {
            "_mosString128": "5983A501:0049B924:8390EF2B",
          },
          "Items": [
            {
              "EditorialDuration": 645,
              "ID": {
                "_mosString128": "0",
              },
              "MOSID": "testmos.enps.com",
              "MosExternalMetaData": [
                {
                  "MosPayload": {
                    "Owner": "SHOLMES",
                    "destination": "b",
                    "source": "a",
                    "transitionMode": 2,
                    "transitionPoint": 463,
                  },
                  "MosSchema": "https://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
                  "MosScope": "PLAYLIST",
                },
              ],
              "ObjectID": {
                "_mosString128": "M000224",
              },
              "Paths": [
                {
                  "Description": "MPEG2 Video",
                  "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
                  "Type": "PATH",
                },
                {
                  "Description": "WM9 750Kbps",
                  "Target": "https://server/proxy/clipe.wmv",
                  "Type": "PROXY PATH",
                },
                {
                  "Description": "MOS Object",
                  "Target": "https://server/proxy/clipe.xml",
                  "Type": "METADATA PATH",
                },
              ],
              "Slug": {
                "_mosString128": "COLSTAT MURDER:VO",
              },
              "Trigger": "CHAINED",
              "UserTimingDuration": 310,
            },
          ],
          "Number": {
            "_mosString128": "A5",
          },
          "Slug": {
            "_mosString128": "COLSTAT MURDER",
          },
        },
        {
          "ID": {
            "_mosString128": "3854737F:0003A34D:983A0B28",
          },
          "Items": [
            {
              "EditorialDuration": 310,
              "EditorialStart": 55,
              "ID": {
                "_mosString128": "0",
              },
              "MOSID": "testmos.enps.com",
              "MosExternalMetaData": [
                {
                  "MosPayload": {
                    "Owner": "SHOLMES",
                    "destination": "b",
                    "source": "a",
                    "transitionMode": 2,
                    "transitionPoint": 463,
                  },
                  "MosSchema": "https://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
                  "MosScope": "PLAYLIST",
                },
              ],
              "ObjectID": {
                "_mosString128": "M000133",
              },
              "UserTimingDuration": 200,
            },
          ],
          "Number": {
            "_mosString128": "A6",
          },
          "Slug": {
            "_mosString128": "AIRLINE INSPECTIONS",
          },
        },
      ],
    },
  ],
]
`;

exports[`Profile 2 onCreateRunningOrder with simple story 1`] = `
[
  [
    {
      "EditorialDuration": {
        "_mosDuration": 3505,
      },
      "EditorialStart": {
        "_mosTime": 1239987720000,
        "_timezone": "Z",
        "_timezoneOffset": 0,
      },
      "ID": {
        "_mosString128": "96857485",
      },
      "Slug": {
        "_mosString128": "5PM RUNDOWN",
      },
      "Stories": [
        {
          "ID": {
            "_mosString128": "3854737F:0003A34D:983A0B28",
          },
          "Items": [],
          "Slug": {
            "_mosString128": "undefined",
          },
        },
      ],
    },
  ],
]
`;

exports[`Profile 2 onCreateRunningOrder with simple story: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1634</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1634</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onCreateRunningOrder: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1633</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1633</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onDeleteRunningOrder 1`] = `
[
  [
    49478285,
  ],
]
`;

exports[`Profile 2 onDeleteRunningOrder: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1635</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1635</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onDeleteRunningOrder: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1636</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1636</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onItemStatus 1`] = `
[
  [
    {
      "Channel": {
        "_mosString128": "B",
      },
      "ID": {
        "_mosString128": "0",
      },
      "ObjectId": {
        "_mosString128": "A0295",
      },
      "RunningOrderId": {
        "_mosString128": "5PM",
      },
      "Status": "PLAY",
      "StoryId": {
        "_mosString128": "HOTEL FIRE",
      },
      "Time": {
        "_mosTime": 1239459233000,
        "_timezone": "Z",
        "_timezoneOffset": 0,
      },
    },
  ],
]
`;

exports[`Profile 2 onItemStatus: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1641</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1641</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onItemStatus: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1642</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1642</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onMetadataReplace 1`] = `
[
  [
    {
      "EditorialDuration": {
        "_mosDuration": 3505,
      },
      "EditorialStart": {
        "_mosTime": 1239987720000,
        "_timezone": "Z",
        "_timezoneOffset": 0,
      },
      "ID": {
        "_mosString128": "96857485",
      },
      "MosExternalMetaData": [
        {
          "MosPayload": {
            "Owner": "SHOLMES",
            "destination": "b",
            "source": "a",
            "transitionMode": 2,
            "transitionPoint": 463,
          },
          "MosSchema": "https://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
          "MosScope": "PLAYLIST",
        },
      ],
      "Slug": {
        "_mosString128": "5PM RUNDOWN",
      },
    },
  ],
]
`;

exports[`Profile 2 onMetadataReplace: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1638</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1638</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onMetadataReplace: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1639</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1639</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRODeleteItems 1`] = `
[
  [
    {
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
      "StoryID": {
        "_mosString128": "2",
      },
    },
    [
      {
        "_mosString128": "23",
      },
      {
        "_mosString128": "24",
      },
    ],
  ],
]
`;

exports[`Profile 2 onRODeleteItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1651</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1651</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRODeleteItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1652</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1652</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRODeleteItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1654</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1654</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRODeleteStories 1`] = `
[
  [
    {
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
    },
    [
      {
        "_mosString128": "3",
      },
    ],
  ],
]
`;

exports[`Profile 2 onRODeleteStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1650</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1650</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRODeleteStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1651</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1651</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRODeleteStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1653</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1653</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROInsertItems 1`] = `
[
  [
    {
      "ItemID": {
        "_mosString128": "23",
      },
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
      "StoryID": {
        "_mosString128": "2",
      },
    },
    [
      {
        "EditorialDuration": 700,
        "EditorialStart": 0,
        "ID": {
          "_mosString128": "27",
        },
        "MOSID": "testmos",
        "ObjectID": {
          "_mosString128": "M19873",
        },
        "Paths": [
          {
            "Description": "MPEG2 Video",
            "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
            "Type": "PATH",
          },
          {
            "Description": "WM9 750Kbps",
            "Target": "https://server/proxy/clipe.wmv",
            "Type": "PROXY PATH",
          },
          {
            "Description": "MOS Object",
            "Target": "https://server/proxy/clipe.xml",
            "Type": "METADATA PATH",
          },
        ],
        "Slug": {
          "_mosString128": "NHL PKG",
        },
        "UserTimingDuration": 690,
      },
    ],
  ],
]
`;

exports[`Profile 2 onROInsertItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1644</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1644</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROInsertItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1645</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1645</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROInsertItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1646</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1646</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROInsertStories 1`] = `
[
  [
    {
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
      "StoryID": {
        "_mosString128": "2",
      },
    },
    [
      {
        "ID": {
          "_mosString128": "17",
        },
        "Items": [
          {
            "EditorialDuration": 715,
            "EditorialStart": 0,
            "ID": {
              "_mosString128": "27",
            },
            "MOSID": "testmos",
            "ObjectID": {
              "_mosString128": "M73627",
            },
            "Paths": [
              {
                "Description": "MPEG2 Video",
                "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
                "Type": "PATH",
              },
              {
                "Description": "WM9 750Kbps",
                "Target": "https://server/proxy/clipe.wmv",
                "Type": "PROXY PATH",
              },
              {
                "Description": "MOS Object",
                "Target": "https://server/proxy/clipe.xml",
                "Type": "METADATA PATH",
              },
            ],
            "UserTimingDuration": 415,
          },
          {
            "EditorialDuration": 315,
            "EditorialStart": 0,
            "ID": {
              "_mosString128": "28",
            },
            "MOSID": "testmos",
            "ObjectID": {
              "_mosString128": "M73628",
            },
          },
        ],
        "Number": {
          "_mosString128": "A2",
        },
        "Slug": {
          "_mosString128": "Barcelona Football",
        },
      },
    ],
  ],
]
`;

exports[`Profile 2 onROInsertStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1643</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1643</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROInsertStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1644</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1644</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROMoveItems 1`] = `
[
  [
    {
      "ItemID": {
        "_mosString128": "12",
      },
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
      "StoryID": {
        "_mosString128": "2",
      },
    },
    [
      {
        "_mosString128": "23",
      },
      {
        "_mosString128": "24",
      },
    ],
  ],
]
`;

exports[`Profile 2 onROMoveItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1649</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1649</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROMoveItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1650</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1650</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROMoveItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1652</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1652</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROMoveStories 1`] = `
[
  [
    {
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
      "StoryID": {
        "_mosString128": "2",
      },
    },
    [
      {
        "_mosString128": "7",
      },
      {
        "_mosString128": "12",
      },
    ],
  ],
]
`;

exports[`Profile 2 onROMoveStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1648</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1648</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROMoveStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1649</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1649</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROMoveStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1651</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1651</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROMoveStory 1`] = `
[
  [
    {
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
      "StoryID": {
        "_mosString128": "2",
      },
    },
    [
      {
        "_mosString128": "7",
      },
    ],
  ],
]
`;

exports[`Profile 2 onROMoveStory: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1647</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1647</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROMoveStory: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1648</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1648</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROMoveStory: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1650</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1650</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROReplaceItems 1`] = `
[
  [
    {
      "ItemID": {
        "_mosString128": "23",
      },
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
      "StoryID": {
        "_mosString128": "2",
      },
    },
    [
      {
        "EditorialDuration": 700,
        "EditorialStart": 0,
        "ID": {
          "_mosString128": "27",
        },
        "MOSID": "testmos",
        "ObjectID": {
          "_mosString128": "M19873",
        },
        "Paths": [
          {
            "Description": "MPEG2 Video",
            "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
            "Type": "PATH",
          },
          {
            "Description": "WM9 750Kbps",
            "Target": "https://server/proxy/clipe.wmv",
            "Type": "PROXY PATH",
          },
          {
            "Description": "MOS Object",
            "Target": "https://server/proxy/clipe.xml",
            "Type": "METADATA PATH",
          },
        ],
        "Slug": {
          "_mosString128": "NHL PKG",
        },
        "UserTimingDuration": 690,
      },
    ],
  ],
]
`;

exports[`Profile 2 onROReplaceItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1646</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1646</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROReplaceItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1647</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1647</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROReplaceItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1649</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1649</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROReplaceStories 1`] = `
[
  [
    {
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
      "StoryID": {
        "_mosString128": "2",
      },
    },
    [
      {
        "ID": {
          "_mosString128": "17",
        },
        "Items": [
          {
            "EditorialDuration": 715,
            "EditorialStart": 0,
            "ID": {
              "_mosString128": "27",
            },
            "MOSID": "testmos",
            "ObjectID": {
              "_mosString128": "M73627",
            },
            "Paths": [
              {
                "Description": "MPEG2 Video",
                "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
                "Type": "PATH",
              },
              {
                "Description": "WM9 750Kbps",
                "Target": "https://server/proxy/clipe.wmv",
                "Type": "PROXY PATH",
              },
              {
                "Description": "MOS Object",
                "Target": "https://server/proxy/clipe.xml",
                "Type": "METADATA PATH",
              },
            ],
            "UserTimingDuration": 415,
          },
          {
            "EditorialDuration": 315,
            "EditorialStart": 0,
            "ID": {
              "_mosString128": "28",
            },
            "MOSID": "testmos",
            "ObjectID": {
              "_mosString128": "M73628",
            },
          },
        ],
        "Number": {
          "_mosString128": "A2",
        },
        "Slug": {
          "_mosString128": "Porto Football",
        },
      },
    ],
  ],
]
`;

exports[`Profile 2 onROReplaceStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1645</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1645</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROReplaceStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1646</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1646</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROReplaceStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1647</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1647</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROSwapItems 1`] = `
[
  [
    {
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
      "StoryID": {
        "_mosString128": "2",
      },
    },
    {
      "_mosString128": "23",
    },
    {
      "_mosString128": "24",
    },
  ],
]
`;

exports[`Profile 2 onROSwapItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1653</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1653</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROSwapItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1654</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1654</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROSwapItems: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1656</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1656</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROSwapStories 1`] = `
[
  [
    {
      "RunningOrderID": {
        "_mosString128": "5PM",
      },
    },
    {
      "_mosString128": "3",
    },
    {
      "_mosString128": "5",
    },
  ],
]
`;

exports[`Profile 2 onROSwapStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1652</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1652</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROSwapStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1653</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1653</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onROSwapStories: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1655</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1655</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onReadyToAir 1`] = `
[
  [
    {
      "ID": {
        "_mosString128": "5PM",
      },
      "Status": "READY",
    },
  ],
]
`;

exports[`Profile 2 onReadyToAir: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1642</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1642</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onReadyToAir: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1643</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1643</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onReplaceRunningOrder 1`] = `
[
  [
    {
      "ID": {
        "_mosString128": "96857485",
      },
      "Slug": {
        "_mosString128": "5PM RUNDOWN",
      },
      "Stories": [
        {
          "ID": {
            "_mosString128": "5983A501:0049B924:8390EF2B",
          },
          "Items": [
            {
              "EditorialDuration": 645,
              "ID": {
                "_mosString128": "0",
              },
              "MOSID": "testmos.enps.com",
              "MosExternalMetaData": [
                {
                  "MosPayload": {
                    "Owner": "SHOLMES",
                    "destination": "b",
                    "source": "a",
                    "transitionMode": 2,
                    "transitionPoint": 463,
                  },
                  "MosSchema": "https://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
                  "MosScope": "PLAYLIST",
                },
              ],
              "ObjectID": {
                "_mosString128": "M000224",
              },
              "Paths": [
                {
                  "Description": "MPEG2 Video",
                  "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
                  "Type": "PATH",
                },
                {
                  "Description": "WM9 750Kbps",
                  "Target": "https://server/proxy/clipe.wmv",
                  "Type": "PROXY PATH",
                },
                {
                  "Description": "MOS Object",
                  "Target": "https://server/proxy/clipe.xml",
                  "Type": "METADATA PATH",
                },
              ],
              "Slug": {
                "_mosString128": "COLSTAT MURDER:VO",
              },
              "Trigger": "CHAINED",
              "UserTimingDuration": 310,
            },
          ],
          "Number": {
            "_mosString128": "A1",
          },
          "Slug": {
            "_mosString128": "COLSTAT MURDER",
          },
        },
        {
          "ID": {
            "_mosString128": "3852737F:0013A64D:923A0B28",
          },
          "Items": [
            {
              "EditorialDuration": 600,
              "EditorialStart": 500,
              "ID": {
                "_mosString128": "0",
              },
              "MOSID": "testmos.enps.com",
              "MosExternalMetaData": [
                {
                  "MosPayload": {
                    "Owner": "SHOLMES",
                    "destination": "b",
                    "source": "a",
                    "transitionMode": 2,
                    "transitionPoint": 463,
                  },
                  "MosSchema": "https://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
                  "MosScope": "PLAYLIST",
                },
              ],
              "ObjectID": {
                "_mosString128": "M000295",
              },
              "UserTimingDuration": 310,
            },
          ],
          "Number": {
            "_mosString128": "A2",
          },
          "Slug": {
            "_mosString128": "AIRLINE SAFETY",
          },
        },
      ],
    },
  ],
]
`;

exports[`Profile 2 onReplaceRunningOrder: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1634</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1634</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onReplaceRunningOrder: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1635</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1635</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRequestRunningOrder 1`] = `
[
  [
    96857485,
  ],
]
`;

exports[`Profile 2 onRequestRunningOrder 2`] = `
{
  "mos": {
    "messageID": {
      "_text": 1636,
    },
    "mosID": {
      "_text": "our.mos.id",
    },
    "ncsID": {
      "_text": "their.mos.id",
    },
    "roList": {
      "roEdDur": {
        "_text": "0:58:25",
      },
      "roEdStart": {
        "_text": "2009-04-17T17:02:00,000Z",
      },
      "roID": {
        "_text": 96857485,
      },
      "roSlug": {
        "_text": "5PM RUNDOWN",
      },
      "story": [
        {
          "item": {
            "itemEdDur": {
              "_text": 645,
            },
            "itemID": {
              "_text": 0,
            },
            "itemSlug": {
              "_text": "COLSTAT MURDER:VO",
            },
            "itemTrigger": {
              "_text": "CHAINED",
            },
            "itemUserTimingDur": {
              "_text": 310,
            },
            "mosExternalMetadata": {
              "mosPayload": {
                "Owner": {
                  "_text": "SHOLMES",
                },
                "destination": {
                  "_text": "b",
                },
                "source": {
                  "_text": "a",
                },
                "transitionMode": {
                  "_text": 2,
                },
                "transitionPoint": {
                  "_text": 463,
                },
              },
              "mosSchema": {
                "_text": "https://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
              },
              "mosScope": {
                "_text": "PLAYLIST",
              },
            },
            "mosID": {
              "_text": "testmos.enps.com",
            },
            "objID": {
              "_text": "M000224",
            },
            "objPaths": {
              "objMetadataPath": {
                "_attributes": {
                  "techDescription": "MOS Object",
                },
                "_text": "https://server/proxy/clipe.xml",
              },
              "objPath": {
                "_attributes": {
                  "techDescription": "MPEG2 Video",
                },
                "_text": "\\server\\media\\clip392028cd2320s0d.mxf",
              },
              "objProxyPath": {
                "_attributes": {
                  "techDescription": "WM9 750Kbps",
                },
                "_text": "https://server/proxy/clipe.wmv",
              },
            },
          },
          "storyID": {
            "_text": "5983A501:0049B924:8390EF2B",
          },
          "storyNum": {
            "_text": "A5",
          },
          "storySlug": {
            "_text": "COLSTAT MURDER",
          },
        },
        {
          "item": {
            "itemEdDur": {
              "_text": 310,
            },
            "itemEdStart": {
              "_text": 55,
            },
            "itemID": {
              "_text": 0,
            },
            "itemUserTimingDur": {
              "_text": 200,
            },
            "mosExternalMetadata": {
              "mosPayload": {
                "Owner": {
                  "_text": "SHOLMES",
                },
                "destination": {
                  "_text": "b",
                },
                "source": {
                  "_text": "a",
                },
                "transitionMode": {
                  "_text": 2,
                },
                "transitionPoint": {
                  "_text": 463,
                },
              },
              "mosSchema": {
                "_text": "https://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
              },
              "mosScope": {
                "_text": "PLAYLIST",
              },
            },
            "mosID": {
              "_text": "testmos.enps.com",
            },
            "objID": {
              "_text": "M000133",
            },
          },
          "storyID": {
            "_text": "3854737F:0003A34D:983A0B28",
          },
          "storyNum": {
            "_text": "A6",
          },
          "storySlug": {
            "_text": "AIRLINE INSPECTIONS",
          },
        },
      ],
    },
  },
}
`;

exports[`Profile 2 onRequestRunningOrder not found: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1637</messageID>
  <roAck>
    <roID>96857485</roID>
    <roStatus>NACK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1637</messageID>
  <roAck>
    <roID>96857485</roID>
    <roStatus>NACK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRequestRunningOrder not found: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1638</messageID>
  <roAck>
    <roID>96857485</roID>
    <roStatus>NACK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1638</messageID>
  <roAck>
    <roID>96857485</roID>
    <roStatus>NACK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRequestRunningOrder: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1636</messageID>
  <roList>
    <roID>96857485</roID>
    <roSlug>5PM RUNDOWN</roSlug>
    <roEdStart>2009-04-17T17:02:00,000Z</roEdStart>
    <roEdDur>0:58:25</roEdDur>
    <story>
      <storyID>5983A501:0049B924:8390EF2B</storyID>
      <storySlug>COLSTAT MURDER</storySlug>
      <storyNum>A5</storyNum>
      <item>
        <itemID>0</itemID>
        <objID>M000224</objID>
        <mosID>testmos.enps.com</mosID>
        <itemSlug>COLSTAT MURDER:VO</itemSlug>
        <itemEdDur>645</itemEdDur>
        <itemUserTimingDur>310</itemUserTimingDur>
        <itemTrigger>CHAINED</itemTrigger>
        <mosExternalMetadata>
          <mosSchema>https://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>
          <mosPayload>
            <Owner>SHOLMES</Owner>
            <transitionMode>2</transitionMode>
            <transitionPoint>463</transitionPoint>
            <source>a</source>
            <destination>b</destination>
          </mosPayload>
          <mosScope>PLAYLIST</mosScope>
        </mosExternalMetadata>
        <objPaths>
          <objPath techDescription="MPEG2 Video">\\server\\media\\clip392028cd2320s0d.mxf</objPath>
          <objProxyPath techDescription="WM9 750Kbps">https://server/proxy/clipe.wmv</objProxyPath>
          <objMetadataPath techDescription="MOS Object">https://server/proxy/clipe.xml</objMetadataPath>
        </objPaths>
      </item>
    </story>
    <story>
      <storyID>3854737F:0003A34D:983A0B28</storyID>
      <storySlug>AIRLINE INSPECTIONS</storySlug>
      <storyNum>A6</storyNum>
      <item>
        <itemID>0</itemID>
        <objID>M000133</objID>
        <mosID>testmos.enps.com</mosID>
        <itemEdStart>55</itemEdStart>
        <itemEdDur>310</itemEdDur>
        <itemUserTimingDur>200</itemUserTimingDur>
        <mosExternalMetadata>
          <mosSchema>https://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>
          <mosPayload>
            <Owner>SHOLMES</Owner>
            <transitionMode>2</transitionMode>
            <transitionPoint>463</transitionPoint>
            <source>a</source>
            <destination>b</destination>
          </mosPayload>
          <mosScope>PLAYLIST</mosScope>
        </mosExternalMetadata>
      </item>
    </story>
  </roList>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1636</messageID>
  <roList>
    <roID>96857485</roID>
    <roSlug>5PM RUNDOWN</roSlug>
    <roEdStart>2009-04-17T17:02:00,000Z</roEdStart>
    <roEdDur>0:58:25</roEdDur>
    <story>
      <storyID>5983A501:0049B924:8390EF2B</storyID>
      <storySlug>COLSTAT MURDER</storySlug>
      <storyNum>A5</storyNum>
      <item>
        <itemID>0</itemID>
        <objID>M000224</objID>
        <mosID>testmos.enps.com</mosID>
        <itemSlug>COLSTAT MURDER:VO</itemSlug>
        <itemEdDur>645</itemEdDur>
        <itemUserTimingDur>310</itemUserTimingDur>
        <itemTrigger>CHAINED</itemTrigger>
        <mosExternalMetadata>
          <mosSchema>https://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>
          <mosPayload>
            <Owner>SHOLMES</Owner>
            <transitionMode>2</transitionMode>
            <transitionPoint>463</transitionPoint>
            <source>a</source>
            <destination>b</destination>
          </mosPayload>
          <mosScope>PLAYLIST</mosScope>
        </mosExternalMetadata>
        <objPaths>
          <objPath techDescription="MPEG2 Video">\\server\\media\\clip392028cd2320s0d.mxf</objPath>
          <objProxyPath techDescription="WM9 750Kbps">https://server/proxy/clipe.wmv</objProxyPath>
          <objMetadataPath techDescription="MOS Object">https://server/proxy/clipe.xml</objMetadataPath>
        </objPaths>
      </item>
    </story>
    <story>
      <storyID>3854737F:0003A34D:983A0B28</storyID>
      <storySlug>AIRLINE INSPECTIONS</storySlug>
      <storyNum>A6</storyNum>
      <item>
        <itemID>0</itemID>
        <objID>M000133</objID>
        <mosID>testmos.enps.com</mosID>
        <itemEdStart>55</itemEdStart>
        <itemEdDur>310</itemEdDur>
        <itemUserTimingDur>200</itemUserTimingDur>
        <mosExternalMetadata>
          <mosSchema>https://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>
          <mosPayload>
            <Owner>SHOLMES</Owner>
            <transitionMode>2</transitionMode>
            <transitionPoint>463</transitionPoint>
            <source>a</source>
            <destination>b</destination>
          </mosPayload>
          <mosScope>PLAYLIST</mosScope>
        </mosExternalMetadata>
      </item>
    </story>
  </roList>
</mos>"
`;

exports[`Profile 2 onRequestRunningOrder: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1637</messageID>
  <roList>
    <roID>96857485</roID>
    <roSlug>5PM RUNDOWN</roSlug>
    <roEdStart>2009-04-17T17:02:00,000Z</roEdStart>
    <roEdDur>0:58:25</roEdDur>
    <story>
      <storyID>5983A501:0049B924:8390EF2B</storyID>
      <storySlug>COLSTAT MURDER</storySlug>
      <storyNum>A5</storyNum>
      <item>
        <itemID>0</itemID>
        <objID>M000224</objID>
        <mosID>testmos.enps.com</mosID>
        <itemSlug>COLSTAT MURDER:VO</itemSlug>
        <itemEdDur>645</itemEdDur>
        <itemUserTimingDur>310</itemUserTimingDur>
        <itemTrigger>CHAINED</itemTrigger>
        <mosExternalMetadata>
          <mosSchema>https://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>
          <mosPayload>
            <Owner>SHOLMES</Owner>
            <transitionMode>2</transitionMode>
            <transitionPoint>463</transitionPoint>
            <source>a</source>
            <destination>b</destination>
          </mosPayload>
          <mosScope>PLAYLIST</mosScope>
        </mosExternalMetadata>
        <objPaths>
          <objPath techDescription="MPEG2 Video">\\server\\media\\clip392028cd2320s0d.mxf</objPath>
          <objProxyPath techDescription="WM9 750Kbps">https://server/proxy/clipe.wmv</objProxyPath>
          <objMetadataPath techDescription="MOS Object">https://server/proxy/clipe.xml</objMetadataPath>
        </objPaths>
      </item>
    </story>
    <story>
      <storyID>3854737F:0003A34D:983A0B28</storyID>
      <storySlug>AIRLINE INSPECTIONS</storySlug>
      <storyNum>A6</storyNum>
      <item>
        <itemID>0</itemID>
        <objID>M000133</objID>
        <mosID>testmos.enps.com</mosID>
        <itemEdStart>55</itemEdStart>
        <itemEdDur>310</itemEdDur>
        <itemUserTimingDur>200</itemUserTimingDur>
        <mosExternalMetadata>
          <mosSchema>https://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>
          <mosPayload>
            <Owner>SHOLMES</Owner>
            <transitionMode>2</transitionMode>
            <transitionPoint>463</transitionPoint>
            <source>a</source>
            <destination>b</destination>
          </mosPayload>
          <mosScope>PLAYLIST</mosScope>
        </mosExternalMetadata>
      </item>
    </story>
  </roList>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1637</messageID>
  <roList>
    <roID>96857485</roID>
    <roSlug>5PM RUNDOWN</roSlug>
    <roEdStart>2009-04-17T17:02:00,000Z</roEdStart>
    <roEdDur>0:58:25</roEdDur>
    <story>
      <storyID>5983A501:0049B924:8390EF2B</storyID>
      <storySlug>COLSTAT MURDER</storySlug>
      <storyNum>A5</storyNum>
      <item>
        <itemID>0</itemID>
        <objID>M000224</objID>
        <mosID>testmos.enps.com</mosID>
        <itemSlug>COLSTAT MURDER:VO</itemSlug>
        <itemEdDur>645</itemEdDur>
        <itemUserTimingDur>310</itemUserTimingDur>
        <itemTrigger>CHAINED</itemTrigger>
        <mosExternalMetadata>
          <mosSchema>https://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>
          <mosPayload>
            <Owner>SHOLMES</Owner>
            <transitionMode>2</transitionMode>
            <transitionPoint>463</transitionPoint>
            <source>a</source>
            <destination>b</destination>
          </mosPayload>
          <mosScope>PLAYLIST</mosScope>
        </mosExternalMetadata>
        <objPaths>
          <objPath techDescription="MPEG2 Video">\\server\\media\\clip392028cd2320s0d.mxf</objPath>
          <objProxyPath techDescription="WM9 750Kbps">https://server/proxy/clipe.wmv</objProxyPath>
          <objMetadataPath techDescription="MOS Object">https://server/proxy/clipe.xml</objMetadataPath>
        </objPaths>
      </item>
    </story>
    <story>
      <storyID>3854737F:0003A34D:983A0B28</storyID>
      <storySlug>AIRLINE INSPECTIONS</storySlug>
      <storyNum>A6</storyNum>
      <item>
        <itemID>0</itemID>
        <objID>M000133</objID>
        <mosID>testmos.enps.com</mosID>
        <itemEdStart>55</itemEdStart>
        <itemEdDur>310</itemEdDur>
        <itemUserTimingDur>200</itemUserTimingDur>
        <mosExternalMetadata>
          <mosSchema>https://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>
          <mosPayload>
            <Owner>SHOLMES</Owner>
            <transitionMode>2</transitionMode>
            <transitionPoint>463</transitionPoint>
            <source>a</source>
            <destination>b</destination>
          </mosPayload>
          <mosScope>PLAYLIST</mosScope>
        </mosExternalMetadata>
      </item>
    </story>
  </roList>
</mos>"
`;

exports[`Profile 2 onRunningOrderStatus 1`] = `
[
  [
    {
      "ID": {
        "_mosString128": "5PM",
      },
      "Status": "MANUAL CTRL",
      "Time": {
        "_mosTime": 1239459233000,
        "_timezone": "Z",
        "_timezoneOffset": 0,
      },
    },
  ],
]
`;

exports[`Profile 2 onRunningOrderStatus: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1639</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1639</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onRunningOrderStatus: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1640</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1640</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onStoryStatus 1`] = `
[
  [
    {
      "ID": {
        "_mosString128": "HOTEL FIRE",
      },
      "RunningOrderId": {
        "_mosString128": "5PM",
      },
      "Status": "PLAY",
      "Time": {
        "_mosTime": 923840033000,
        "_timezone": "Z",
        "_timezoneOffset": 0,
      },
    },
  ],
]
`;

exports[`Profile 2 onStoryStatus: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1640</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1640</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 onStoryStatus: <mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1641</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos> 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>1641</messageID>
  <roAck>
    <roID>runningOrderId</roID>
    <roStatus>OK</roStatus>
  </roAck>
</mos>"
`;

exports[`Profile 2 sendCreateRunningOrder, sendReplaceRunningOrder 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roCreate>
    <roID>96857485</roID>
    <roSlug>the slug</roSlug>
    <roChannel>14</roChannel>
    <roEdStart>2005-07-01T13:15:00,000Z</roEdStart>
    <roEdDur>1:23:45</roEdDur>
    <roTrigger>A</roTrigger>
    <story>
      <storyID>story0</storyID>
      <storySlug>slug0</storySlug>
    </story>
    <story>
      <storyID>story1</storyID>
      <storySlug>slug1</storySlug>
    </story>
  </roCreate>
</mos>"
`;

exports[`Profile 2 sendCreateRunningOrder, sendReplaceRunningOrder 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendCreateRunningOrder, sendReplaceRunningOrder 3`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roReplace>
    <roID>96857485</roID>
    <roSlug>the slug</roSlug>
    <roChannel>14</roChannel>
    <roEdStart>2005-07-01T13:15:00,000Z</roEdStart>
    <roEdDur>1:23:45</roEdDur>
    <roTrigger>A</roTrigger>
    <story>
      <storyID>story0</storyID>
      <storySlug>slug0</storySlug>
    </story>
    <story>
      <storyID>story1</storyID>
      <storySlug>slug1</storySlug>
    </story>
  </roReplace>
</mos>"
`;

exports[`Profile 2 sendCreateRunningOrder, sendReplaceRunningOrder 4`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendDeleteRunningOrder 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roDelete>
    <roID>96857485</roID>
  </roDelete>
</mos>"
`;

exports[`Profile 2 sendDeleteRunningOrder 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendItemStatus 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementStat element="ITEM">
    <roID>5PM</roID>
    <storyID>HOTEL FIRE</storyID>
    <itemID>0</itemID>
    <objID>A0295</objID>
    <itemChannel>B</itemChannel>
    <status>PLAY</status>
    <time>xx</time>
  </roElementStat>
</mos>"
`;

exports[`Profile 2 sendItemStatus 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendMetadataReplace 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roMetadataReplace>
    <roID>96857485</roID>
    <roSlug>the slug</roSlug>
    <roChannel>14</roChannel>
    <roEdStart>2005-07-01T13:15:00,000Z</roEdStart>
    <roEdDur>1:23:45</roEdDur>
    <roTrigger>A</roTrigger>
    <mosExternalMetadata>
      <mosSchema>http://localhost/mySchema0</mosSchema>
      <mosPayload>
        <prop0>a</prop0>
        <prop1>b</prop1>
      </mosPayload>
      <mosScope>PLAYLIST</mosScope>
    </mosExternalMetadata>
    <mosExternalMetadata>
      <mosSchema>http://localhost/mySchema1</mosSchema>
      <mosPayload>
        <prop2>x</prop2>
        <prop3>y</prop3>
      </mosPayload>
      <mosScope>PLAYLIST</mosScope>
    </mosExternalMetadata>
  </roMetadataReplace>
</mos>"
`;

exports[`Profile 2 sendMetadataReplace 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendRODeleteItems 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="DELETE">
    <roID>96857485</roID>
    <element_target>
      <storyID>existing0</storyID>
    </element_target>
    <element_source>
      <itemID>existing0_1</itemID>
      <itemID>existing0_2</itemID>
      <itemID>existing0_3</itemID>
      <itemID>existing0_4</itemID>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendRODeleteItems 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendRODeleteStories 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="DELETE">
    <roID>96857485</roID>
    <element_source>
      <storyID>existing0</storyID>
      <storyID>existing1</storyID>
      <storyID>existing2</storyID>
      <storyID>existing3</storyID>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendRODeleteStories 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendROInsertItems 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="INSERT">
    <roID>96857485</roID>
    <element_target>
      <storyID>existing0</storyID>
      <itemID>existing0_0</itemID>
    </element_target>
    <element_source>
      <item>
        <itemID>insert0</itemID>
        <objID>objid0</objID>
        <mosID>mosid0</mosID>
        <itemSlug>slug0</itemSlug>
      </item>
      <item>
        <itemID>insert1</itemID>
        <objID>objid1</objID>
        <mosID>mosid1</mosID>
        <itemSlug>slug1</itemSlug>
      </item>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendROInsertItems 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendROInsertStories 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="INSERT">
    <roID>96857485</roID>
    <element_target>
      <storyID>existing0</storyID>
    </element_target>
    <element_source>
      <story>
        <storyID>insert0</storyID>
        <storySlug>slug0</storySlug>
        <storyNum>number0</storyNum>
      </story>
      <story>
        <storyID>insert1</storyID>
        <storySlug>slug1</storySlug>
        <storyNum>number1</storyNum>
      </story>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendROInsertStories 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendROMoveItems 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="MOVE">
    <roID>96857485</roID>
    <element_target>
      <storyID>existing0</storyID>
      <itemID>existing0_0</itemID>
    </element_target>
    <element_source>
      <itemID>existing0_1</itemID>
      <itemID>existing0_2</itemID>
      <itemID>existing0_3</itemID>
      <itemID>existing0_4</itemID>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendROMoveItems 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendROMoveStories 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="MOVE">
    <roID>96857485</roID>
    <element_target>
      <storyID>existing0</storyID>
    </element_target>
    <element_source>
      <storyID>existing1</storyID>
      <storyID>existing2</storyID>
      <storyID>existing3</storyID>
      <storyID>existing4</storyID>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendROMoveStories 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendROReplaceItems 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="REPLACE">
    <roID>96857485</roID>
    <element_target>
      <storyID>existing0</storyID>
      <itemID>existing0_0</itemID>
    </element_target>
    <element_source>
      <item>
        <itemID>insert0</itemID>
        <objID>objid0</objID>
        <mosID>mosid0</mosID>
        <itemSlug>slug0</itemSlug>
      </item>
      <item>
        <itemID>insert1</itemID>
        <objID>objid1</objID>
        <mosID>mosid1</mosID>
        <itemSlug>slug1</itemSlug>
      </item>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendROReplaceItems 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendROReplaceStories 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="REPLACE">
    <roID>96857485</roID>
    <element_target>
      <storyID>existing0</storyID>
    </element_target>
    <element_source>
      <story>
        <storyID>insert0</storyID>
        <storySlug>slug0</storySlug>
        <storyNum>number0</storyNum>
      </story>
      <story>
        <storyID>insert1</storyID>
        <storySlug>slug1</storySlug>
        <storyNum>number1</storyNum>
      </story>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendROReplaceStories 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendROSwapItems 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="SWAP">
    <roID>96857485</roID>
    <element_target>
      <storyID>existing0</storyID>
    </element_target>
    <element_source>
      <itemID>existing0_1</itemID>
      <itemID>existing0_2</itemID>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendROSwapItems 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendROSwapStories 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementAction operation="SWAP">
    <roID>96857485</roID>
    <element_source>
      <storyID>existing0</storyID>
      <storyID>existing1</storyID>
    </element_source>
  </roElementAction>
</mos>"
`;

exports[`Profile 2 sendROSwapStories 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendReadyToAir 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roReadyToAir>
    <roID>96857485</roID>
    <roAir>READY</roAir>
  </roReadyToAir>
</mos>"
`;

exports[`Profile 2 sendReadyToAir 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendRequestRunningOrder 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roReq>
    <roID>M000123</roID>
  </roReq>
</mos>"
`;

exports[`Profile 2 sendRequestRunningOrder 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Slug": {
    "_mosString128": "5PM RUNDOWN",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [
        {
          "EditorialDuration": 645,
          "ID": {
            "_mosString128": "0",
          },
          "MOSID": "testmos.enps.com",
          "MosExternalMetaData": [
            {
              "MosPayload": {
                "Owner": "SHOLMES",
                "destination": "b",
                "source": "a",
                "transitionMode": 2,
                "transitionPoint": 463,
              },
              "MosSchema": "https://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
              "MosScope": "PLAYLIST",
            },
          ],
          "ObjectID": {
            "_mosString128": "M000224",
          },
          "Paths": [
            {
              "Description": "MPEG2 Video",
              "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
              "Type": "PATH",
            },
            {
              "Description": "WM9 750Kbps",
              "Target": "https://server/proxy/clipe.wmv",
              "Type": "PROXY PATH",
            },
            {
              "Description": "MOS Object",
              "Target": "https://server/proxy/clipe.xml",
              "Type": "METADATA PATH",
            },
          ],
          "Slug": {
            "_mosString128": "COLSTAT MURDER:VO",
          },
          "Trigger": "CHAINED",
          "UserTimingDuration": 310,
        },
      ],
      "Number": {
        "_mosString128": "B10",
      },
      "Slug": {
        "_mosString128": "Colstat Murder",
      },
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [
        {
          "EditorialDuration": 310,
          "EditorialStart": 55,
          "ID": {
            "_mosString128": "0",
          },
          "MOSID": "testmos.enps.com",
          "MosExternalMetaData": [
            {
              "MosPayload": {
                "Owner": "SHOLMES",
                "destination": "b",
                "source": "a",
                "transitionMode": 2,
                "transitionPoint": 463,
              },
              "MosSchema": "https://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
              "MosScope": "PLAYLIST",
            },
          ],
          "ObjectID": {
            "_mosString128": "M000133",
          },
          "UserTimingDuration": 310,
        },
      ],
      "Number": {
        "_mosString128": "B11",
      },
      "Slug": {
        "_mosString128": "Test MOS",
      },
    },
  ],
}
`;

exports[`Profile 2 sendRunningOrderStatus 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementStat element="RO">
    <roID>5PM</roID>
    <status>MANUAL CTRL</status>
    <time>xx</time>
  </roElementStat>
</mos>"
`;

exports[`Profile 2 sendRunningOrderStatus 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;

exports[`Profile 2 sendStoryStatus 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <roElementStat element="STORY">
    <roID>5PM</roID>
    <storyID>HOTEL FIRE</storyID>
    <status>PLAY</status>
    <time>xx</time>
  </roElementStat>
</mos>"
`;

exports[`Profile 2 sendStoryStatus 2`] = `
{
  "ID": {
    "_mosString128": "96857485",
  },
  "Status": {
    "_mosString128": "Unknown object M000133",
  },
  "Stories": [
    {
      "ID": {
        "_mosString128": "5983A501:0049B924:8390EF2B",
      },
      "Items": [],
    },
    {
      "ID": {
        "_mosString128": "3854737F:0003A34D:983A0B28",
      },
      "Items": [],
    },
  ],
  "_messageID": 0,
  "mosID": undefined,
  "mosTypes": {
    "mosDuration": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosString128": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "mosTime": {
      "create": [Function],
      "is": [Function],
      "stringify": [Function],
      "validate": [Function],
      "valueOf": [Function],
    },
    "strict": true,
  },
  "ncsID": undefined,
  "port": "upper",
  "strict": true,
}
`;
